--- a/multi-theme-app/index.html
+++ b/multi-theme-app/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link href="/src/style.css" rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <title>Multi Theme App</title>
   </head>
   <body>
       
